@@ -85,6 +85,10 @@ Note: This is a change to what is displayed and the entries are not updated to p
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
+<td>New Explorer view in addition to the previous Flattened List and Tree views.</td>
+</tr>
+<tr>
+<td align="center" width="100">n/a</td>
 <td>Display of the details of the entries' differences in the Compare database results dialog by
 invoking the compare selected entries dialog via the right click context menu.</td>
 </tr>
@@ -110,7 +114,10 @@ report log to determine if they pressed abort in time (any changes can still be 
 
 <table>
 <tbody>
-
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3525995);return false;">3525995</a></td>
+<td>Find now only highlights/select the found entry.</td>
+</tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3523117);return false;">3523117</a></td>
 <td>Password Expiration Date now correctly set when using intervals.</td>
