@@ -18,6 +18,7 @@ been set (e.g. the entry has not been changed since it was created), then the en
 creation date/time is displayed. If the entry was created before PasswordSafe saved
 these fields, then all fields may still be blank. Note: This is a change to what
 is displayed and the entries are not updated to populate these fields.
+[] New Explorer view in addition to the previous Flattened List and Tree views.
 [] Display of the details of the entries' differences in the Compare database results dialog
 by invoking the compare selected entries dialog via the right click context menu.
 [] Allow user to abort a long running Compare, Merge or Synchronise of databases. Note:
@@ -31,6 +32,7 @@ None
 
 Bugs fixed in 3.28.1
 ====================
+[3525995] Find now only highlights/select the found entry.
 [3523117] Password Expiration Date now correctly set when using intervals.
 [3521158] Paste into the Notes field (Add or Edit entry) is now always in plain text.
 [3518734] When generating passwords (Ctrl-P), the user is no longer prompted to save
